# ChangeLog for dev-java/spring-expression
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*spring-expression-3.2.4 (17 Sep 2013)

  17 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +files/3.2.4-build.xml,
  +metadata.xml, +spring-expression-3.2.4.ebuild:
  Ebuild for the expression module of spring