@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Oct 2013; Johann Schmitz <ercpe@gentoo.org> -files/3.2.4-build.xml,
+  spring-expression-3.2.4.ebuild:
+  Use build.xml from shared tarball instead of cp'ing from FILESDIR
+
 *spring-expression-3.2.4 (17 Sep 2013)
 
   17 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +files/3.2.4-build.xml,
